--- a/Index.css
+++ b/Index.css
@@ -5,12 +5,11 @@
     font-size: 30px;
     line-height: 48px;
     /* or 160% */
-    
     letter-spacing: -0.02em;
-    
     color: #0A1B32;
-
+    margin-top: 37px;
+    margin-left: 80px;
 }
 .logo-dot {
-    color: #A3DC00;
+    color:#A3DC00;
 }
