--- a/Index.css
+++ b/Index.css
@@ -13,3 +13,14 @@
 .logo-dot {
     color:#A3DC00;
 }
+.main-title{
+font-family: 'Ramaraja';
+font-style: normal;
+font-weight: 400;
+font-size: 72px;
+line-height: 76px;
+/* or 106% */
+letter-spacing: 0.02em;
+color: #1B0A42;
+
+}
