--- a/Styles/Index.css
+++ b/Styles/Index.css
@@ -1,7 +1,7 @@
 .logo {
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: bold;
     font-size: 30px;
     line-height: 48px;
     /* or 160% */
@@ -14,15 +14,24 @@
 .logo-dot {
     color:#A3DC00;
 }
+section {
+    display: inline-block;
+    position: left;
+    width: 756px;
+    height: 638px;
+    left: 783px;
+    top: 141px;
+    bottom: 141px;
 
+} 
 .main-title {
-    max-width: 495;
-    width: 100%;
+    max-width: 395;
+    width: 90%;
     margin-top: 203px;
-    margin-left: 200px;
+    margin-left: 90px;
     font-family: 'Ramaraja', serif;
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 72px;
     line-height: 76px;
     /* or 106% */
@@ -32,40 +41,36 @@
 
 .main-info {
     max-width: 503px;
-    width: 100px;
-    margin-top: 10px;
-    margin-left: 200px;
+    width: 1300px;
+    margin-top: 100px;
+    margin-left: 90px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 200;
     font-size: 20px;
     line-height: 32px;
     /* or 160% */
     letter-spacing: 0.02em;
     color: #9A9A9A;
-
 }
 
 .main-btn {
     width: 152px;
     height: 64px;
+    margin-top: 50px;
+    margin-left: 90px;
     background-color: #A3DC00;
     border-radius: 6px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: bold;
     font-size: 16px;
     line-height: 32px;
     /* or 200% */
     text-align: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
-
 }
-
-section {
-    display: inline-block;
-} 
 
 
 
