--- a/Styles/Index.css
+++ b/Styles/Index.css
@@ -15,13 +15,7 @@
     color:#A3DC00;
 }
 section {
-    display: inline-block;
-    position: left;
-    width: 756px;
-    height: 638px;
-    left: 783px;
-    top: 141px;
-    bottom: 141px;
+    display: inline-block; position: left;
 
 } 
 .main-title {
@@ -40,14 +34,14 @@ section {
 }
 
 .main-info {
-    max-width: 503px;
-    width: 1300px;
-    margin-top: 100px;
-    margin-left: 90px;
+    max-width: 483px;
+    width: 90%;
+    margin-top: 10px;
+    margin-left: 100px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
-    font-weight: 200;
-    font-size: 28px;
+    font-weight: normal;
+    font-size: 20px;
     line-height: 32px;
     /* or 160% */
     letter-spacing: 0.02em;
@@ -58,7 +52,7 @@ section {
     width: 152px;
     height: 64px;
     margin-top: 50px;
-    margin-left: 90px;
+    margin-left: 100px;
     background-color: #A3DC00;
     border-radius: 6px;
     font-family: 'Roboto', sans-serif;
